src/iisnode/WIN-LP7VQ5KUMG8-5336-stderr-1688927909330.txt
Application has thrown an uncaught exception and is terminated:
C:\nodejs\server\src\utils\validation.js:235
exports.validateInputs(req, res, next) {
                                       ^

SyntaxError: Unexpected token '{'
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:110:18)
    at Object.<anonymous> (C:\nodejs\server\src\routes\auth\roleRoutes.js:7:18)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
